@@ -1,5 +1,6 @@
 library(testthat)
-library(RStoolbox)   
+library(RStoolbox) 
+
 
 Sys.setenv("R_TESTS" = "") ## needed to pass R CMD check: https://github.com/hadley/testthat/issues/144
 
